[TD-794] 유저 가게 주변 가게 조회시 Redis 캐시 레이어 도입 (1분 TTL)